Add an example in `use-futurepass` folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
     "baseUrl": ".",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "paths": {}
+    "paths": {
+      "@trne/utils/*": ["./packages/utils/src/*"]
+    }
+  },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
   }
 }
