--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "@typescript-eslint/parser": "^5.59.6",
     "eslint": "^8.40.0",
     "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@3.6.1",
+  "dependencies": {
+    "envalid": "^7.3.1"
+  }
 }
