--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -34,5 +34,5 @@ jobs:
       - name: Lint
         run: pnpm lint
 
-      - name: Test
-        run: pnpm test
+      # - name: Test
+      #   run: pnpm test
