--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "prettier --check . && eslint \"**/*.{ts,tsx}\"",
     "format": "prettier --config .prettierrc.json --write ."
   },
+  "dependencies": {
+    "envalid": "^7.3.1",
+    "ethers": "^6.6.2"
+  },
   "devDependencies": {
     "@eslint/create-config": "^0.4.3",
     "@types/node": "^20.2.1",
@@ -19,8 +23,5 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4"
-  },
-  "dependencies": {
-    "envalid": "^7.3.1"
   }
 }
