--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "envalid": "^7.3.1",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@eslint/create-config": "^0.4.3",
     "@types/node": "^20.2.1",
+    "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
     "eslint": "^8.40.0",
