--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -5,7 +5,9 @@
     "@polkadot/keyring": "^12.3.2",
     "@polkadot/types": "^10.9.1",
     "@polkadot/util": "^12.3.2",
-    "@polkadot/util-crypto": "^12.3.2",
-    "@therootnetwork/api": "^1.0.1"
+    "@polkadot/util-crypto": "^12.3.2"
+  },
+  "devDependencies": {
+    "@therootnetwork/api": "^1.0.2"
   }
 }
