--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "envalid": "^7.3.1",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@eslint/create-config": "^0.4.3",
