use-forge examples

--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,8 @@ out
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+.vscode
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
@@ -104,3 +106,6 @@ out
 .pnp.*
 
 .docker
+
+# Forge output directory
+forge-artifacts
