--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -25,6 +25,11 @@ jobs:
           node-version: 16
           cache: "pnpm"
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
       - name: Install dependencies
         run: pnpm install
 
