Add `decodeProxyError` example

--- a/examples/substrate/use-futurepass/package.json
+++ b/examples/substrate/use-futurepass/package.json
@@ -1,5 +1,8 @@
 {
   "scripts": {
     "call": "ts-node --project ../../../tsconfig.json"
+  },
+  "dependencies": {
+    "@polkadot/util": "^12.3.2"
   }
 }
