[TRN-192] use-forge examples (#11)
* use-forge examples

* add install Foundry step on PR check workflow

* add examples/evm/use-forge/lib/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -96,6 +96,9 @@ out
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+.vscode
+.idea
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
@@ -104,4 +107,6 @@ out
 .pnp.*
 
 .docker
-.idea
+
+# Forge output directory
+forge-artifacts
