--- a/examples/evm/use-forge/package.json
+++ b/examples/evm/use-forge/package.json
@@ -1,9 +1,3 @@
 {
-  "scripts": {
-    "install": "forge install --no-commit",
-    "test": "forge test",
-    "clean": "forge clean",
-    "forge-create": "./script/use-forge-create.sh",
-    "forge-script": "./script/use-forge-script.sh"
-  }
+  "scripts": {}
 }
