--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "prettier --check . && eslint \"**/*.{ts,tsx}\"",
-    "format": "prettier --config .prettierrc.json --write ."
+    "format": "prettier --config .prettierrc.js --write ."
   },
   "dependencies": {
     "envalid": "^7.3.1",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@eslint/create-config": "^0.4.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "^20.2.1",
     "@types/yargs": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
