--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "paths": {
-      "@trne/utils/*": ["./packages/utils/src/*"]
+      "@trne/utils/*": ["./packages/utils/src/*"],
+      "@trne/ui-utils/*": ["./packages/ui/*"]
     }
   },
   "ts-node": {
