--- a/examples/ui/with-metamask/tsconfig.json
+++ b/examples/ui/with-metamask/tsconfig.json
@@ -24,12 +24,6 @@
       "@trne/ui-utils/*": ["../../../packages/ui/*"]
     }
   },
-  "include": [
-    "next-env.d.ts",
-    "global.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+  "include": ["next-env.d.ts", "global.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
