--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,6 +6,7 @@
     "@polkadot/types": "^10.9.1",
     "@polkadot/util": "^12.3.2",
     "@polkadot/util-crypto": "^12.3.2",
-    "@therootnetwork/api": "^1.0.2"
+    "@therootnetwork/api": "^1.0.2",
+    "realm-web": "^2.0.0"
   }
 }
