Example to use XRPL bridge (#19)
* Example to use XRPL bridge


Co-authored-by: Aidan <starke.aidan@gmail.com>

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.4",
+    "xrpl": "^2.7.0",
     "yargs": "^17.7.2"
   }
 }
