--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,6 +8,7 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@polkadot/api": "^10.9.1",
     "@trne/utils": "workspace:^",
     "clsx": "^2.0.0",
     "daisyui": "^3.2.1",
