--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint/create-config": "^0.4.3",
     "@polkadot/types": "^10.9.1",
+    "@therootnetwork/api-types": "^1.0.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "^20.2.1",
     "@types/yargs": "^17.0.24",
