Update to use non-default gas fee for the example

--- a/examples/substrate/use-feeProxy/package.json
+++ b/examples/substrate/use-feeProxy/package.json
@@ -1,5 +1,6 @@
 {
   "scripts": {
-    "call": "ts-node --project ../../../tsconfig.json"
+    "run": "ts-node --project ../../../tsconfig.json",
+    "run:callWithFeePreferences": "pnpm run src/callWithFeePreferences.ts"
   }
 }
