Switch back to the standard `call` prefix

--- a/examples/substrate/use-feeProxy/package.json
+++ b/examples/substrate/use-feeProxy/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "run": "ts-node --project ../../../tsconfig.json",
-    "run:callWithFeePreferences": "pnpm run src/callWithFeePreferences.ts"
+    "call": "ts-node --project ../../../tsconfig.json",
+    "call:callWithFeePreferences": "pnpm call src/callWithFeePreferences.ts"
   }
 }
