Simplify the script names

--- a/examples/substrate/use-feeProxy/package.json
+++ b/examples/substrate/use-feeProxy/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "call": "ts-node --project ../../../tsconfig.json",
-    "call:callWithFeePreferences": "pnpm call src/callWithFeePreferences.ts"
+    "call:callSystemRemark": "pnpm call src/callSystemRemark.ts",
+    "call:callProxyExtrinsic": "pnpm call src/callProxyExtrinsic.ts"
   }
 }
