--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "envalid": "^7.3.1",
     "ethers": "^5.7.2",
+    "pretty-error": "^4.0.0",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
