Add `callBatchAll` example

--- a/examples/substrate/use-feeProxy/package.json
+++ b/examples/substrate/use-feeProxy/package.json
@@ -2,6 +2,7 @@
   "scripts": {
     "call": "ts-node --project ../../../tsconfig.json",
     "call:callSystemRemark": "pnpm call src/callSystemRemark.ts",
-    "call:callProxyExtrinsic": "pnpm call src/callProxyExtrinsic.ts"
+    "call:callProxyExtrinsic": "pnpm call src/callProxyExtrinsic.ts",
+    "call:callBatchAll": "pnpm call src/callBatchAll.ts"
   }
 }
