--- a/examples/substrate/use-feeProxy/package.json
+++ b/examples/substrate/use-feeProxy/package.json
@@ -1,5 +1,8 @@
 {
   "scripts": {
-    "call": "ts-node --project ../../../tsconfig.json"
+    "call": "ts-node --project ../../../tsconfig.json",
+    "call:callSystemRemark": "pnpm call src/callSystemRemark.ts",
+    "call:callProxyExtrinsic": "pnpm call src/callProxyExtrinsic.ts",
+    "call:callBatchAll": "pnpm call src/callBatchAll.ts"
   }
 }
