--- a/examples/substrate/use-feeProxy/package.json
+++ b/examples/substrate/use-feeProxy/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "call": "ts-node --project ../../../tsconfig.json",
+    "call": "tsx --tsconfig ../../../tsconfig.json",
     "call:callSystemRemark": "pnpm call src/callSystemRemark.ts",
     "call:callProxyExtrinsic": "pnpm call src/callProxyExtrinsic.ts",
     "call:callBatchAll": "pnpm call src/callBatchAll.ts"
