--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   "dependencies": {
     "envalid": "^7.3.1",
     "ethers": "^5.7.2",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "@polkadot/api": "^10.9.1",
+    "@polkadot/keyring": "^12.3.2",
+    "@polkadot/util": "^12.3.2",
+    "@polkadot/util-crypto": "^12.3.2",
+    "@therootnetwork/api": "^1.0.2",
+    "@therootnetwork/evm": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/create-config": "^0.4.3",
