Add `callEVMCall.ts` to the example

--- a/examples/substrate/use-feeProxy/package.json
+++ b/examples/substrate/use-feeProxy/package.json
@@ -3,6 +3,7 @@
     "call": "tsx --tsconfig ../../../tsconfig.json",
     "call:callSystemRemark": "pnpm call src/callSystemRemark.ts",
     "call:callProxyExtrinsic": "pnpm call src/callProxyExtrinsic.ts",
-    "call:callBatchAll": "pnpm call src/callBatchAll.ts"
+    "call:callBatchAll": "pnpm call src/callBatchAll.ts",
+    "call:callEVMCall": "pnpm call src/callEVMCall.ts"
   }
 }
