--- a/examples/substrate/use-sft/package.json
+++ b/examples/substrate/use-sft/package.json
@@ -1,8 +1,11 @@
 {
   "scripts": {
-    "call": "ts-node --project ../../../tsconfig.json"
-  },
-  "dependencies": {
-    "@polkadot/util": "^12.3.2"
+    "call": "tsx --tsconfig ../../../tsconfig.json",
+    "call:createCollection": "pnpm call src/createCollection.ts",
+    "call:updateCollection": "pnpm call src/updateCollection.ts",
+    "call:createToken": "pnpm call src/createToken.ts",
+    "call:updateToken": "pnpm call src/updateToken.ts",
+    "call:mint": "pnpm call src/mint.ts",
+    "call:transfer": "pnpm call src/transfer.ts"
   }
 }
