--- a/examples/evm/use-forge/package.json
+++ b/examples/evm/use-forge/package.json
@@ -2,8 +2,8 @@
   "scripts": {
     "test": "forge test",
     "clean": "forge clean",
-    "forge-install": "forge install --no-commit",
-    "forge-create": "./script/use-forge-create.sh",
-    "forge-script": "./script/use-forge-script.sh"
+    "forge:install": "forge install foundry-rs/forge-std --no-commit --shallow",
+    "forge:create": "./script/use-forge-create.sh",
+    "forge:script": "./script/use-forge-script.sh"
   }
 }
