--- a/examples/evm/use-forge/package.json
+++ b/examples/evm/use-forge/package.json
@@ -4,6 +4,7 @@
     "clean": "forge clean",
     "forge:install": "forge install foundry-rs/forge-std --no-commit --shallow",
     "forge:create": "./script/use-forge-create.sh",
-    "forge:script": "./script/use-forge-script.sh"
+    "forge:script": "./script/use-forge-script.sh",
+    "forge:test": "forge test"
   }
 }
