--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es2021",
     "module": "commonjs",
+    "lib": ["ES2022.Error"],
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
