that wraps around

--- a/examples/substrate/use-feeProxy/package.json
+++ b/examples/substrate/use-feeProxy/package.json
@@ -5,6 +5,7 @@
     "call:callProxyExtrinsic": "pnpm call src/callProxyExtrinsic.ts",
     "call:callBatchAll": "pnpm call src/callBatchAll.ts",
     "call:callEVMCall": "pnpm call src/callEVMCall.ts",
-    "call:callProxyExtrinsicEVMCall": "pnpm call src/callProxyExtrinsicEVMCall.ts"
+    "call:callProxyExtrinsicEVMCall": "pnpm call src/callProxyExtrinsicEVMCall.ts",
+    "call:callXRPLBridgeWithdraw": "pnpm call src/callXRPLBridgeWithdraw.ts"
   }
 }
