--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@polkadot/util": "^12.3.2",
     "@polkadot/util-crypto": "^12.3.2",
     "@therootnetwork/api": "^1.0.2",
-    "@therootnetwork/evm": "^1.0.3"
+    "@therootnetwork/evm": "^1.0.3",
+    "xrpl": "^2.5.0-beta.0"
   },
   "devDependencies": {
     "@eslint/create-config": "^0.4.3",
